# winjet

./: .envrc  .ignore  Cargo.toml  LICENSE  crates.nix  flake.nix  rust-toolchain.toml
src/: app.rs  controller.rs  main.rs  util.rs
src/app/: main_screen.rs  setup_screen.rs
src/app/main_screen/: no_docker_service_screen.rs
src/controller/: docker.rs  kvm.rs  state.rs
winjet-gt/: Cargo.toml
winjet-gt/src/: main.rs
